projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/divmod_rejects_str_rhs_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "divmod_rejects_str_rhs_argument"
# subject = "divmod"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""divmod: divmod_rejects_str_rhs_argument (errors)."""
try:
    result = divmod(1, "2")
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
